# ms-tpm-20-ref-rs

./: .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  README.md  UPGRADE_PATH.md  bindgen.h  bindgen.sh  build.rs  rustfmt.toml
.cargo/: config.toml
docs/: upgrade_138_to_162.md
overrides/include/: CompilerDependencies.h  Implementation.h  TpmBuildSwitches.h
overrides/include/ossl/: TpmToOsslHash.h  TpmToOsslMath.h  TpmToOsslSym.h
overrides/include/prototypes/: TpmToOsslDesSupport_fp.h  TpmToOsslMath_fp.h  TpmToOsslSupport_fp.h
overrides/src/: runtime_state.c
overrides/src/crypt/ossl/: TpmToOsslDesSupport.c  TpmToOsslMath.c  TpmToOsslSupport.c
src/: bindgen.rs  error.rs  ffi.rs  lib.rs  tpmlib_state.rs
src/callback_plat/: RunCommand.c  api.rs  mod.rs
src/callback_plat/api/: cancel.rs  clock.rs  entropy.rs  locality_plat.rs  nvmem.rs  platform_act.rs  power_plat.rs  pp_plat.rs  unique.rs
src/dll_plat/: mod.rs
src/plat/: RunCommand.c  api.rs  mod.rs
src/plat/api/: cancel.rs  clock.rs  entropy.rs  locality_plat.rs  nvmem.rs  platform_act.rs  power_plat.rs  pp_plat.rs  unique.rs
src/sample_plat/: mod.rs
test-harness/: Cargo.toml
test-harness/src/: main.rs
