[package]
name = "ms-tpm-20-ref"
version = "0.1.0"
authors = ["Daniel Prilik <daprilik@microsoft.com>"]
edition = "2018"
license = "MIT"
description = "Rust wrapper around ms-tpm-20-ref"
repository = "https://github.com/daprilik/ms-tpm-20-ref-rs"
readme = "README.md"
categories = ["cryptography", "external-ffi-bindings"]
build = "build/main.rs"

[features]
default = []

sample_platform = []
dll_platform = ["libloading"]

vendored = ['openssl-src']

[dependencies]
cfg-if = "1"
libc = "0.2"
log = "0.4"
log-derive = "0.4.1"
once_cell = "1.7.2"
serde = { version = "1.0", features = ["derive"] }

libloading = { version = "0.7.0", optional = true }

[build-dependencies]
autocfg = "1.0"
cc = { version = "1.0", features = ["parallel"] }
openssl-src = { git = "https://github.com/yuandrew/openssl-src-rs.git", branch = "openssl3-fix", optional = true }
pkg-config = "0.3.9"
walkdir = "2.3.2"

[dev-dependencies]
pretty_env_logger = "0.4.0"

[target.'cfg(target_env = "msvc")'.build-dependencies]
vcpkg = "0.2.8"

[workspace]
members = ["test-harness"]
