[package]
name = "ms-tpm-20-ref"
version = "0.1.0"
authors = ["Daniel Prilik <daprilik@microsoft.com>"]
edition = "2018"
license = "MIT"
description = "Rust wrapper around ms-tpm-20-ref"
repository = "https://github.com/daprilik/ms-tpm-20-ref-rs"
readme = "README.md"
categories = ["cryptography", "external-ffi-bindings"]

[features]
default = []

sample_platform = []
dll_platform = ["libloading"]

vendored = ["openssl-sys/vendored"]

[dependencies]
cfg-if = "1"
log = "0.4"
log-derive = "0.4.1"
once_cell = "1.7.2"
openssl-sys = "0.9.71"

# state de/serialization
postcard = { version = "1.0.2", default-features = false, features = ["use-std"] }
serde = { version = "1.0", features = ["derive"] }

libloading = { version = "0.7.0", optional = true }

[build-dependencies]
cc = { version = "1.0", features = [ "parallel" ] }
walkdir = "2.3.2"

[dev-dependencies]
pretty_env_logger = "0.4.0"

[workspace]
members = ["test-harness"]
